productions/veadk/archives/1.0.0/zh/components/knowledge/local.mdx
---
title: "使用本地内存存储"
en_link: "/productions/veadk/archives/1.0.0/en/components/knowledge/local"
---

`local` 后端使用 LlamaIndex 的内存向量索引存储知识。知识文本先经 embedding 模型向量化，再写入进程内的向量索引，检索时按相似度召回。它无需任何外部服务，是 `KnowledgeBase` 的**默认后端**，最适合本地调试与快速验证。

<Warning>
数据仅保存在进程内存中，程序退出后即丢失。生产环境请使用持久化后端。
</Warning>

## 何时使用

- 本地调试、教学或快速验证 RAG 流程；
- 无外部向量库依赖，仅需 embedding 模型即可运行。

## 依赖

```bash lines
pip install "veadk-python[extensions]"
```

## 使用示例

```python lines
from veadk import Agent
from veadk.knowledgebase import KnowledgeBase

kb = KnowledgeBase(backend="local", index="company_faq")
kb.add_from_text("公司的标准年假为每年 15 天，入职满一年起享受。")

agent = Agent(
    name="demo",
    instruction="回答用户问题，必要时用 `load_knowledgebase` 工具检索知识库。",
    knowledgebase=kb,
)
```

也可以通过 `backend_config` 显式传入 embedding 配置：

```python lines
from veadk.knowledgebase import KnowledgeBase
from veadk.configs.model_configs import EmbeddingModelConfig

kb = KnowledgeBase(
    backend="local",
    index="company_faq",
    backend_config={
        "index": "company_faq",
        "embedding_config": EmbeddingModelConfig(
            name="doubao-embedding-vision-250615",
            dim=2048,
        ),
    },
)
```

## 参数

### 构造参数

`backend_config` 支持以下配置项：

| 参数 | 类型 | 默认值 | 说明 |
| :--- | :--- | :--- | :--- |
| `index` | `str` | 无默认，由 `KnowledgeBase` 传入 | 知识库索引名。本地后端对命名无额外限制。 |
| `embedding_config` | `EmbeddingModelConfig` | 自动从 `MODEL_EMBEDDING_*` 环境变量读取 | embedding 模型配置。 |

### embedding 配置

`embedding_config` 为 `EmbeddingModelConfig`，环境变量前缀 `MODEL_EMBEDDING_`：

| 配置项 | 环境变量 | 类型 | 默认值 | 说明 |
| :--- | :--- | :--- | :--- | :--- |
| `name` | `MODEL_EMBEDDING_NAME` | `str` | `doubao-embedding-vision-250615` | embedding 模型名。 |
| `dim` | `MODEL_EMBEDDING_DIM` | `int` | `2048` | embedding 向量维度。 |
| `api_base` | `MODEL_EMBEDDING_API_BASE` | `str` | `https://ark.cn-beijing.volces.com/api/v3/` | embedding 服务的 API 地址。 |
| `api_key` | `MODEL_EMBEDDING_API_KEY` | `str` | 依次回退到 `MODEL_AGENT_API_KEY` 或自动获取的 Ark 令牌 | 访问 embedding 服务的密钥。 |

## 环境变量配置

```bash lines
# embedding 模型
export MODEL_EMBEDDING_NAME="doubao-embedding-vision-250615"
export MODEL_EMBEDDING_DIM=2048
export MODEL_EMBEDDING_API_KEY="your-ark-api-key"
```

<Note>
本地后端仅依赖 embedding 模型，无需任何数据库连接配置。文本会按文件类型自动切分为片段后再向量化。
</Note>
